--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,10 @@
 services:
+  # Web service for Django app
   - type: web
     name: vidyai
     runtime: python
-    buildCommand: |
-      pip install -r requirements.txt
-      cd VidyAI
-      python manage.py collectstatic --no-input
-      python manage.py migrate
-    startCommand: cd VidyAI && gunicorn vidyai.wsgi:application --bind 0.0.0.0:$PORT
+    buildCommand: pip install -r requirements.txt && cd VidyAI && python manage.py collectstatic --no-input && python manage.py migrate
+    startCommand: cd VidyAI && gunicorn vidyai.wsgi:application
     envVars:
       - key: SECRET_KEY
         generateValue: true
@@ -21,5 +18,10 @@ services:
         fromDatabase:
           name: vidyai_db
           property: connectionString
-      - key: ALLOWED_HOSTS
-        value: "*"
+
+# Database service for PostgreSQL
+databases:
+  - name: vidyai_db
+    plan: free
+    databaseName: vidyai
+    user: vidyai 
